chore(site): change names

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const sortedPosts = getSortedPosts(posts);
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Terve!</h1>
+      <h1>Nikita Makhov</h1>
       <a
         target="_blank"
         href="/rss.xml"
