--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import getFeaturedPosts from "@utils/getFeaturedPosts";
 const posts = await Astro.glob<Frontmatter>("../contents/**/*.md");
 
 const sortedPosts = getSortedPosts(posts);
-const featuredPosts = getFeaturedPosts(posts);
+const featuredPosts = getFeaturedPosts(sortedPosts);
 ---
 
 <Layout>
